--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>Todolist</h1>
+
+<div class="card flex justify-center">
+  <p-button label="Check" />
+</div>
+
 <router-outlet></router-outlet>
