Création de quelques component et une barre de navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,7 @@
-<div class="card">
-  <p-tabs value="/dashboard">
-    <p-tablist>
-      @for(tab of tabs; track tab.route){
-        <p-tab [value]="tab.route" [routerLink]="tab.route">
-          <i [class]="tab.icon"></i>
-          <span>{{ tab.label }}</span>
-        </p-tab>
-      }
-    </p-tablist>
-  </p-tabs>
-</div>
-<!--<router-outlet></router-outlet>-->
+<!-- Header -->
+<app-header></app-header>
+
+<router-outlet></router-outlet>
+
+<!-- Footer -->
+<app-footer></app-footer>
